# skyrim-llm-runtime

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md
.devcontainer/: devcontainer.json  export-windows-build.sh  post-create.sh
.github/ISSUE_TEMPLATE/: external-modpack-integration.md
docs/00-foundation/: 00-index.md  01-key-principles.md  02-scope-and-non-goals.md  skyrim-llm-runtime.md
docs/10-plan/: 00-poc-definition.md  01-poc-roadmap.md  02-backlog.md  03-acceptance-checklist.md
docs/20-architecture/: 00-system-overview.md  01-transport.md  02-data-contracts.md  03-replay-bundles.md
docs/20-architecture/adr/: ADR-0001-file-bridge-first.md  ADR-0002-openai-only-poc.md  ADR-0003-no-mcp-poc.md
docs/30-runtime/: 00-getting-started.md  01-config.md  02-observability.md  03-safety-pipeline.md  04-provider-openai.md  05-devcontainer.md
docs/40-skyrim-mod/: 00-getting-started.md  01-file-bridge.md  02-ui-minimal.md  03-event-log.md  04-real-skyrim-validation.md  05-first-real-roundtrip.md  06-phase-2-skse-wiring.md
mod/: CMakeLists.txt  README.md
mod/include/skyrim_llm/: bridge_client.hpp  contracts.hpp  controller.hpp  plugin_api.hpp  skse_plugin_stub.hpp  skyrim_integration.hpp
mod/src/: bridge_client.cpp  controller.cpp  harness_main.cpp  plugin_api.cpp  skse_plugin_stub.cpp  skyrim_integration.cpp
runtime/: .gitignore  Cargo.toml  README.md  config.dev.example.json  config.dev.json
runtime/contracts/: recap-request-v1.schema.json  recap-response-v1.schema.json
runtime/crates/provider-openai/: Cargo.toml
runtime/crates/provider-openai/src/: lib.rs
runtime/crates/runtime-core/: Cargo.toml
runtime/crates/runtime-core/src/: cache.rs  config.rs  contracts.rs  lib.rs  observability.rs  replay.rs  safety.rs  service.rs  traits.rs
runtime/crates/runtime-core/tests/: contracts_and_schema.rs  safety_cache_replay.rs  service_fallbacks.rs
runtime/crates/transport-file/: Cargo.toml
runtime/crates/transport-file/src/: lib.rs
runtime/crates/transport-file/tests/: simulator_e2e.rs
runtime/examples/: recap_request.sample.json
skse-plugin/: CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
skse-plugin/include/skyrim_llm_skse_host/: commonlibsse_plugin_pch.hpp  game_api.hpp  game_time_capture.hpp  host_context.hpp  hotkey_binding.hpp  location_capture.hpp  notification_ui.hpp  plugin_shell.hpp  skyrim_game_api.hpp  skyrim_ui_api.hpp  ui_api.hpp  workflow.hpp
skse-plugin/src/: game_time_capture.cpp  host_context.cpp  hotkey.cpp  hotkey_binding.cpp  location_capture.cpp  notification_ui.cpp  plugin_main.cpp  plugin_shell.cpp  skyrim_game_api.cpp  skyrim_ui_api.cpp  snapshot.cpp  ui.cpp
