[workspace]
members = [
  "bin/runtime-cli",
  "crates/runtime-core",
  "crates/provider-openai",
  "crates/transport-file",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
tempfile = "3"
jsonschema = "0.17"
